tests/invalid/runtime/io_write_type_binary.pts
import Io;

function main() : void {
    var f = Io.openBinary("io_bin_bad.bin", "w");
    f.write("abc");
}
